--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 __pycache__
 .idea/
 dataset/images/
+dataset/cropped_test_throws_v2/
+dataset/cropped_test_throws/
 dataset/cropped_images/800/d1_*
 dataset/cropped_images/800/d2_*
 models/*/preds/
